fix: fix responsiveness on tablette

--- a/style/style.css
+++ b/style/style.css
@@ -322,18 +322,34 @@ body {
     .notexpanded {
       max-height: var(--question-height) !important;
       overflow: hidden;
+    }
+    .expanded,
+    .notexpanded {
+      display: flex;
+      align-items: center;
+      border: 1px solid gray;
       width: 47%;
-      border: 1px solid black;
+      margin-bottom: 4vh;
 
+      .notaclass {
+        display: none;
+      }
       div {
-        border: 0px solid black;
-        padding: 5px 10px;
+        display: flex;
+        border: 0px solid gray;
         box-sizing: border-box;
         height: var(--question-height);
         align-items: center;
         overflow: hidden;
         width: 90%;
         justify-content: space-between;
+        .notaclass {
+          display: none;
+        }
+        h5 {
+          margin: 0;
+          padding: 0;
+        }
         button {
           height: 15px;
         }
@@ -348,7 +364,13 @@ body {
 @media (max-width: 950px) {
   .faq {
     div {
-      div {
+      margin: 2px 0;
+
+      .notaclass {
+        display: none;
+      }
+      .expanded,
+      .notexpanded {
         width: 100%;
 
         .notaclass {
